--- a/eventosmusica.html
+++ b/eventosmusica.html
@@ -19,11 +19,15 @@
                 <img src="assets/img/logo3.png" alt="logo" class="img-logo">
             </figure>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Comunidades</a></li>
-                <li><a href="#">Suporte</a></li>
-                <li><a href="#">Reportar</a></li>
-                <li><a href="#">Sair</a></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="chatt/public/chatlivro.html">Comunidade de Livros</a>
+                <li><a href="chatt/public/chatmusica.html">Comunidade de Músicas</a>
+                <li><a href="chatt/public/chatjogos.html">Comunidade de Jogos</a>
+                <li><a href="chatt/public/chatcinema.html">Comunidade de Cinema</a>
+                <li><a href="chatt/public/chatmariafifi.html">Comunidade Maria fifi</a>
+                <li><a href="suporte.html">Suporte</a></li>
+                <li><a href="teladenuncias.html">Reportar</a></li>
+                <li><a href="login.html">Sair</a></li>
             </ul>
             <div class="linha"></div>
             <section class="account">
@@ -51,15 +55,15 @@
         <article class="box-tudo">
             <section class="box-info">
                 <div class="info">
-                    <a href="postagemlivro.html" class="link-postagens"><i class="bi bi-send"></i> Postagens</a>
-                    <a href="" class="link-postagens"><i class="bi bi-chat-text"></i> Músicas mais comentados</a>
+                    <a href="postagemmusica.html" class="link-postagens"><i class="bi bi-send"></i> Postagens</a>
+                    <a href="maisComentadosMusicas.html" class="link-postagens"><i class="bi bi-chat-text"></i> Músicas mais comentados</a>
                     <a href="" class="link-postagens"><i class="bi bi-file-earmark-music"></i> Gravadoras</a>
-                    <a href="" class="link-postagens"><i class="bi bi-journal-text"></i> Gêneros</a>
-                    <a href="" class="link-postagens"><i class="bi bi-calendar2-date"></i> Eventos</a>
-                    <a href="" class="link-postagens"><i class="bi bi-globe"></i> Novidades</a>
-                    <a href="" class="link-postagens"><i class="bi bi-rulers"></i> Regras</a>
-                    <a href="" class="link-postagens"><i class="bi bi-ban"></i> Denúncias</a>
-                    <a href="" class="link-postagens"><i class="bi bi-info-circle"></i> Sobre essa comunidade</a>                </div>
+                    <a href="generomusicas.html" class="link-postagens"><i class="bi bi-journal-text"></i> Gêneros</a>
+                    <a href="eventosmusica.html" class="link-postagens"><i class="bi bi-calendar2-date"></i> Eventos</a>
+                    <a href="novidadesMusica.html" class="link-postagens"><i class="bi bi-globe"></i> Novidades</a>
+                    <a href="regras.html" class="link-postagens"><i class="bi bi-rulers"></i> Regras</a>
+                    <a href="teladenuncias.html" class="link-postagens"><i class="bi bi-ban"></i> Denúncias</a>
+                    <a href="snmusicas.html" class="link-postagens"><i class="bi bi-info-circle"></i> Sobre essa comunidade</a>                </div>
             </section>
             <article class="timeline">
 
