--- a/home.html
+++ b/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,22 +9,27 @@
     <link rel="shortcut icon" href="assets/img/logoOlho.png" type="image/x-icon">
     <title>Home</title>
 </head>
+
 <body>
     <header class="header">
         <input type="checkbox" id="chec" />
         <label for="chec" class="box-chec">
-            <img src="assets/img/menu vertical.png" >
+            <img src="assets/img/menu vertical.png">
         </label>
         <nav>
             <figure class="logo">
                 <img src="assets/img/logo3.png" alt="logo" class="img-logo">
             </figure>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Comunidades</a></li>
-                <li><a href="#">Suporte</a></li>
-                <li><a href="#">Reportar</a></li>
-                <li><a href="#"></a></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="chatt/public/chatlivro.html">Comunidade de Livros</a>
+                <li><a href="chatt/public/chatmusica.html">Comunidade de Músicas</a>
+                <li><a href="chatt/public/chatjogos.html">Comunidade de Jogos</a>
+                <li><a href="chatt/public/chatcinema.html">Comunidade de Cinema</a>
+                <li><a href="chatt/public/chatmariafifi.html">Comunidade Maria fifi</a>
+                <li><a href="suporte.html">Suporte</a></li>
+                <li><a href="teladenuncias.html">Reportar</a></li>
+                <li><a href="login.html">Sair</a></li>
             </ul>
             <div class="linha"></div>
             <section class="account">
@@ -83,23 +89,23 @@
         </section>
         <section class="parallax" id="img04">
         </section>
-        
+
         <h2>Principais Comunidades</h2>
         <section class="box-comunidades">
             <div class="comunidades">
-                <img src="assets/img/book.png"  class="icone-comunidade">
+                <img src="assets/img/book.png" class="icone-comunidade">
                 <span class="comunidade-name">Livros</span>
             </div>
             <div class="comunidades">
-                <img src="assets/img/game.png"  class="icone-comunidade" alt="" >
+                <img src="assets/img/game.png" class="icone-comunidade" alt="">
                 <span class="comunidade-name">Jogos</span>
             </div>
             <div class="comunidades">
-                <img src="assets/img/song.png"  class="icone-comunidade" alt="">
+                <img src="assets/img/song.png" class="icone-comunidade" alt="">
                 <span class="comunidade-name">Músicas</span>
             </div>
             <div class="comunidades">
-                <img src="assets/img/video.png"  class="icone-comunidade1" alt="">
+                <img src="assets/img/video.png" class="icone-comunidade1" alt="">
                 <span class="comunidade-name">Filmes e Séries</span>
             </div>
         </section>
@@ -110,21 +116,21 @@
                 <span>DE MÚSICA</span>
                 <h4 class="titulo-novidade">Anitta vence o ‘Best Latin’ no VMA 2024</h4>
                 <span>Após ter sido indicada para o Best Latin no VMA, Anitta leva o prêmio
-                e se torna a primeira cantora latina a conseguir o feito três vezes consecutivas.</span>
+                    e se torna a primeira cantora latina a conseguir o feito três vezes consecutivas.</span>
             </div>
             <div class="novidade">
                 <img src="assets/img/filme-novidade.jpeg" class="img-novidade" alt="">
                 <span>DE FILMES</span>
                 <h4 class="titulo-novidade">“Ainda Estou Aqui” recebe altas avaliações</h4>
                 <span>Estrelado por Fernanda Torres e com participação de Fernanda Montenegro,
-                foi exibido no festival de Veneza na Itália e recebeu 89% de avaliações positivas.</span>
+                    foi exibido no festival de Veneza na Itália e recebeu 89% de avaliações positivas.</span>
             </div>
             <div class="novidade">
                 <img src="assets/img/minecraft-novidades.jpeg" class="img-novidade" alt="">
                 <span>DE JOGOS</span>
                 <h4 class="titulo-novidade">Mojang anuncia versão nativa para PS5</h4>
-                <span>Após anuciar novas funcionalidades, Mojang também divulga que, além das versões 
-                Java e Bedrock, haverá uma apenas para o PlayStation 5</span>
+                <span>Após anuciar novas funcionalidades, Mojang também divulga que, além das versões
+                    Java e Bedrock, haverá uma apenas para o PlayStation 5</span>
             </div>
         </section>
         <footer class="rodape">
@@ -150,4 +156,5 @@
         </footer>
     </main>
 </body>
+
 </html>
