--- a/postagemmusica.html
+++ b/postagemmusica.html
@@ -19,11 +19,15 @@
                 <img src="assets/img/logo3.png" alt="logo" class="img-logo">
             </figure>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Comunidades</a></li>
-                <li><a href="#">Suporte</a></li>
-                <li><a href="#">Reportar</a></li>
-                <li><a href="#">Sair</a></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="chatt/public/chatlivro.html">Comunidade de Livros</a>
+                <li><a href="chatt/public/chatmusica.html">Comunidade de Músicas</a>
+                <li><a href="chatt/public/chatjogos.html">Comunidade de Jogos</a>
+                <li><a href="chatt/public/chatcinema.html">Comunidade de Cinema</a>
+                <li><a href="chatt/public/chatmariafifi.html">Comunidade Maria fifi</a>
+                <li><a href="suporte.html">Suporte</a></li>
+                <li><a href="teladenuncias.html">Reportar</a></li>
+                <li><a href="login.html">Sair</a></li>
             </ul>
             <div class="linha"></div>
             <section class="account">
