--- a/postagemmusica.html
+++ b/postagemmusica.html
@@ -55,15 +55,15 @@
         <article class="box-tudo">
             <section class="box-info">
                 <div class="info">
-                    <a href="postagemlivro.html" class="link-postagens"><i class="bi bi-send"></i> Postagens</a>
-                    <a href="" class="link-postagens"><i class="bi bi-chat-text"></i> Músicas mais comentados</a>
+                    <a href="postagemmusica.html" class="link-postagens"><i class="bi bi-send"></i> Postagens</a>
+                    <a href="maisComentadosMusicas.html" class="link-postagens"><i class="bi bi-chat-text"></i> Músicas mais comentados</a>
                     <a href="" class="link-postagens"><i class="bi bi-file-earmark-music"></i> Gravadoras</a>
-                    <a href="" class="link-postagens"><i class="bi bi-journal-text"></i> Gêneros</a>
-                    <a href="" class="link-postagens"><i class="bi bi-calendar2-date"></i> Eventos</a>
-                    <a href="" class="link-postagens"><i class="bi bi-globe"></i> Novidades</a>
-                    <a href="" class="link-postagens"><i class="bi bi-rulers"></i> Regras</a>
-                    <a href="" class="link-postagens"><i class="bi bi-ban"></i> Denúncias</a>
-                    <a href="" class="link-postagens"><i class="bi bi-info-circle"></i> Sobre essa comunidade</a>                </div>
+                    <a href="generomusicas.html" class="link-postagens"><i class="bi bi-journal-text"></i> Gêneros</a>
+                    <a href="eventosmusica.html" class="link-postagens"><i class="bi bi-calendar2-date"></i> Eventos</a>
+                    <a href="novidadesMusica.html" class="link-postagens"><i class="bi bi-globe"></i> Novidades</a>
+                    <a href="regras.html" class="link-postagens"><i class="bi bi-rulers"></i> Regras</a>
+                    <a href="teladenuncias.html" class="link-postagens"><i class="bi bi-ban"></i> Denúncias</a>
+                    <a href="snmusicas.html" class="link-postagens"><i class="bi bi-info-circle"></i> Sobre essa comunidade</a>                </div>
             </section>
             <article class="timeline">
 
