--- a/novidadesMF.html
+++ b/novidadesMF.html
@@ -55,15 +55,15 @@
         <article class="box-tudo">
             <section class="box-info">
                 <div class="info">
-                    <a href="postagemlivro.html" class="link-postagens"><i class="bi bi-send"></i> Postagens</a>
-                    <a href="" class="link-postagens"><i class="bi bi-chat-text"></i> Filmes mais comentados</a>
+                    <a href="postagemmariafifi.html" class="link-postagens"><i class="bi bi-send"></i> Postagens</a>
+                    <a href="maisComentadosMariaFifi.html" class="link-postagens"><i class="bi bi-chat-text"></i> Fofocas mais comentadas</a>
                     <a href="" class="link-postagens"><i class="bi bi-camera-reels"></i> Produtoras</a>
                     <a href="" class="link-postagens"><i class="bi bi-journal-text"></i> Gêneros</a>
-                    <a href="" class="link-postagens"><i class="bi bi-calendar2-date"></i> Eventos</a>
-                    <a href="" class="link-postagens"><i class="bi bi-globe"></i> Novidades</a>
-                    <a href="" class="link-postagens"><i class="bi bi-rulers"></i> Regras</a>
-                    <a href="" class="link-postagens"><i class="bi bi-ban"></i> Denúncias</a>
-                    <a href="" class="link-postagens"><i class="bi bi-info-circle"></i> Sobre essa comunidade</a>                </div>
+                    <a href="eventosmariafifi.html" class="link-postagens"><i class="bi bi-calendar2-date"></i> Eventos</a>
+                    <a href="novidadesMF.html" class="link-postagens"><i class="bi bi-globe"></i> Novidades</a>
+                    <a href="regras.html" class="link-postagens"><i class="bi bi-rulers"></i> Regras</a>
+                    <a href="teladenuncias.html" class="link-postagens"><i class="bi bi-ban"></i> Denúncias</a>
+                    <a href="snmariafifi.html" class="link-postagens"><i class="bi bi-info-circle"></i> Sobre essa comunidade</a>                </div>
             </section>
             <article class="timeline">
 
