--- a/generolivros.html
+++ b/generolivros.html
@@ -55,14 +55,14 @@
             <section class="box-info">
                 <div class="info">
                     <a href="postagemlivro.html" class="link-postagens"><i class="bi bi-send"></i> Postagens</a>
-                    <a href="" class="link-postagens"><i class="bi bi-chat-text"></i> Livros mais comentados</a>
+                    <a href="maisComentadosLivros.html" class="link-postagens"><i class="bi bi-chat-text"></i> Livros mais comentados</a>
                     <a href="" class="link-postagens"><i class="bi bi-camera-reels"></i> Produtoras</a>
-                    <a href="" class="link-postagens"><i class="bi bi-journal-text"></i> Gêneros</a>
-                    <a href="" class="link-postagens"><i class="bi bi-calendar2-date"></i> Eventos</a>
-                    <a href="" class="link-postagens"><i class="bi bi-globe"></i> Novidades</a>
-                    <a href="" class="link-postagens"><i class="bi bi-rulers"></i> Regras</a>
-                    <a href="" class="link-postagens"><i class="bi bi-ban"></i> Denúncias</a>
-                    <a href="" class="link-postagens"><i class="bi bi-info-circle"></i> Sobre essa comunidade</a>                </div>
+                    <a href="generolivros.html" class="link-postagens"><i class="bi bi-journal-text"></i> Gêneros</a>
+                    <a href="eventoslivro.html" class="link-postagens"><i class="bi bi-calendar2-date"></i> Eventos</a>
+                    <a href="noidadeslivros.html" class="link-postagens"><i class="bi bi-globe"></i> Novidades</a>
+                    <a href="regras.html" class="link-postagens"><i class="bi bi-rulers"></i> Regras</a>
+                    <a href="teladenuncias.html" class="link-postagens"><i class="bi bi-ban"></i> Denúncias</a>
+                    <a href="snlivros.html" class="link-postagens"><i class="bi bi-info-circle"></i> Sobre essa comunidade</a>                </div>
             </section>
             <article class="timeline">
 
