--- a/home.html
+++ b/home.html
@@ -93,20 +93,20 @@
         <h2>Principais Comunidades</h2>
         <section class="box-comunidades">
             <div class="comunidades">
-                <img src="assets/img/book.png" class="icone-comunidade">
-                <span class="comunidade-name">Livros</span>
+                <a href="chatt/public/chatlivro.html"><img src="assets/img/book.png" class="icone-comunidade"></a>
+                <span class="comunidade-name"><a href="chatt/public/chatlivro.html">Livros</a></span>
             </div>
             <div class="comunidades">
-                <img src="assets/img/game.png" class="icone-comunidade" alt="">
-                <span class="comunidade-name">Jogos</span>
+                <a href="chatt/public/chatjogos.html"><img src="assets/img/game.png" class="icone-comunidade" alt=""></a>
+                <span class="comunidade-name"><a href="chatt/public/chatjogos.html">Jogos</a></span>
             </div>
             <div class="comunidades">
-                <img src="assets/img/song.png" class="icone-comunidade" alt="">
-                <span class="comunidade-name">Músicas</span>
+                <a href="chatt/public/chatmusica.html"><img src="assets/img/song.png" class="icone-comunidade" alt=""></a>
+                <span class="comunidade-name"><a href="chatt/public/chatmusica.html">Músicas</a></span>
             </div>
             <div class="comunidades">
-                <img src="assets/img/video.png" class="icone-comunidade1" alt="">
-                <span class="comunidade-name">Filmes e Séries</span>
+                <a href="chatt/public/chatcinema.html"><img src="assets/img/video.png" class="icone-comunidade1" alt=""></a>
+                <span class="comunidade-name"><a href="chatt/public/chatcinema.html">Filmes e Séries</a></span>
             </div>
         </section>
         <h3>Mais Pesquisados</h3>
@@ -138,20 +138,20 @@
                 <img class="logo-rodape" src="assets/img/4_Sem_Título_20240912103141-removebg-preview.png" alt="">
             </div>
             <div class="info-rodape">
-                <a href="" class="link-rodape">Comunidade de Livros</a>
-                <a href="" class="link-rodape">Comunidade de Jogos</a>
-                <a href="" class="link-rodape">Comunidade de Música</a>
-                <a href="" class="link-rodape">Comunidade de Filmes/Séries</a>
+                <a href="chatt/public/chatlivro.html" class="link-rodape">Comunidade de Livros</a>
+                <a href="chatt/public/chatjogos.html" class="link-rodape">Comunidade de Jogos</a>
+                <a href="chatt/public/chatmusica.html" class="link-rodape">Comunidade de Música</a>
+                <a href="chatt/public/chatcinema.html" class="link-rodape">Comunidade de Filmes/Séries</a>
             </div>
             <div class="info-rodape">
-                <a href="" class="link-rodape">Política de Privacidade</a>
-                <a href="" class="link-rodape">Regras do Oráculo</a>
-                <a href="" class="link-rodape">Configurações de cookies</a>
+                <a href="#" class="link-rodape">Política de Privacidade</a>
+                <a href="regras.html" class="link-rodape">Regras do Oráculo</a>
+                <a href="#" class="link-rodape">Configurações de cookies</a>
             </div>
             <div class="info-rodape">
-                <a href="" class="link-rodape"><i class="bi bi-info-circle"></i> Sobre Nós</a>
-                <a href="" class="link-rodape"><i class="bi bi-telephone"></i> Contato</a>
-                <a href="" class="link-rodape"><i class="bi bi-instagram"></i> Instagram</a>
+                <a href="home.html" class="link-rodape"><i class="bi bi-info-circle"></i> Sobre Nós</a>
+                <a href="#" class="link-rodape"><i class="bi bi-telephone"></i> Contato</a>
+                <a href="#" class="link-rodape"><i class="bi bi-instagram"></i> Instagram</a>
             </div>
         </footer>
     </main>
