--- a/home.html
+++ b/home.html
@@ -31,12 +31,12 @@
                 <li><a href="teladenuncias.html">Reportar</a></li>
                 <li><a href="login.html">Sair</a></li>
             </ul>
-            <div class="linha"></div>
+
             <section class="account">
                 <div class="box-perfil">
-                    <img src="assets/img/fotoperfil.png" alt="" class="perfil">
+                   <a href="minhaconta.html"><img  style="margin-top: 180px;" src="assets/img/fotoperfil.png" alt="" class="perfil" ></a> 
                 </div>
-                <span>Caah_</span>
+               <span  style="margin-top: 190px; margin-left: 10px; color: white;"><a style="color: white;" href="minhaconta.html">Caah_</a></span>
             </section>
         </nav>
         <div class="logo-principal">
