--- a/chatt/public/chatcinema.html
+++ b/chatt/public/chatcinema.html
@@ -232,7 +232,7 @@
                                 <div>${profileImage}</div>
                                 <div class="namechat">
                                     <span class="nome">${name}</span>
-                                    <div class="mensagenl">${message}</div>
+                                    <div class="mensagenl"><span>${message}</span></div>
                                 </div>
                             </div>`;
         messagesList.appendChild(item);
