--- a/chatt/public/chatjogos.html
+++ b/chatt/public/chatjogos.html
@@ -18,10 +18,15 @@
                 <img src="img/logo3.png" alt="logo" class="img-logo">
             </figure>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Contato</a></li>
-                <li><a href="#">Forum</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="chatt/public/chatlivro.html">Comunidade de Livros</a>
+                <li><a href="chatt/public/chatmusica.html">Comunidade de Músicas</a>
+                <li><a href="chatt/public/chatjogos.html">Comunidade de Jogos</a>
+                <li><a href="chatt/public/chatcinema.html">Comunidade de Cinema</a>
+                <li><a href="chatt/public/chatmariafifi.html">Comunidade Maria fifi</a>
+                <li><a href="suporte.html">Suporte</a></li>
+                <li><a href="teladenuncias.html">Reportar</a></li>
+                <li><a href="login.html">Sair</a></li>
             </ul>
             <div class="linha"></div>
             <section class="account">
@@ -50,15 +55,15 @@
     <section class="box-infoCom">
         <section class="box-info">
             <div class="info">
-                <a href="postagemlivro.html" class="link-postagens"><i class="bi bi-send"></i> Postagens</a>
-                <a href="" class="link-postagens"><i class="bi bi-chat-text"></i> Livros mais comentados</a>
-                <a href="" class="link-postagens"><i class="bi bi-camera-reels  "></i> Produtoras</a>
-                <a href="" class="link-postagens"><i class="bi bi-journal-text"></i> Gêneros</a>
-                <a href="" class="link-postagens"><i class="bi bi-calendar2-date"></i> Eventos</a>
-                <a href="" class="link-postagens"><i class="bi bi-globe"></i> Novidades</a>
-                <a href="" class="link-postagens"><i class="bi bi-rulers"></i> Regras</a>
-                <a href="" class="link-postagens"><i class="bi bi-ban"></i> Denúncias</a>
-                <a href="" class="link-postagens"><i class="bi bi-info-circle"></i> Sobre essa comunidade</a>                </div>
+                <a href="/postagemjogos.html" class="link-postagens"><i class="bi bi-send"></i> Postagens</a>
+                <a href="" class="link-postagens"><i class="bi bi-chat-text"></i> Jogos mais comentados</a>
+                <a href="" class="link-postagens"><i class="bi bi-camera-reels  "></i> Distribuidora de jogos</a>
+                <a href="/generojogos.html" class="link-postagens"><i class="bi bi-journal-text"></i> Gêneros</a>
+                <a href="/eventosjogos.html" class="link-postagens"><i class="bi bi-calendar2-date"></i> Eventos</a>
+                <a href="/novidadesJogos.html" class="link-postagens"><i class="bi bi-globe"></i> Novidades</a>
+                <a href="/regras.html" class="link-postagens"><i class="bi bi-rulers"></i> Regras</a>
+                <a href="/teladenuncias.html" class="link-postagens"><i class="bi bi-ban"></i> Denúncias</a>
+                <a href="/snjogos.html" class="link-postagens"><i class="bi bi-info-circle"></i> Sobre essa comunidade</a>                </div>
         </section>
         <div style="width: 50px;">
 
