--- a/genero-cinema.html
+++ b/genero-cinema.html
@@ -55,7 +55,7 @@
             <section class="box-info">
                 <div class="info">
                     <a href="postagemcinema.html" class="link-postagens"><i class="bi bi-send"></i> Postagens</a>
-                    <a href="maisComentadosCinema.html" class="link-postagens"><i class="bi bi-chat-text"></i> Livros mais comentados</a>
+                    <a href="maisComentadosCinema.html" class="link-postagens"><i class="bi bi-chat-text"></i> Filmes mais comentados</a>
                     <a href="" class="link-postagens"><i class="bi bi-camera-reels"></i> Produtoras</a>
                     <a href="genero-cinema.html" class="link-postagens"><i class="bi bi-journal-text"></i> Gêneros</a>
                     <a href="eventoscinema.html" class="link-postagens"><i class="bi bi-calendar2-date"></i> Eventos</a>
