--- a/generojogos.html
+++ b/generojogos.html
@@ -55,7 +55,7 @@
             <section class="box-info">
                 <div class="info">
                     <a href="postagemjogos.html" class="link-postagens"><i class="bi bi-send"></i> Postagens</a>
-                    <a href="maisComentadosJogos.html" class="link-postagens"><i class="bi bi-chat-text"></i> Livros mais comentados</a>
+                    <a href="maisComentadosJogos.html" class="link-postagens"><i class="bi bi-chat-text"></i> Jogos mais comentados</a>
                     <a href="" class="link-postagens"><i class="bi bi-camera-reels"></i> Produtoras</a>
                     <a href="generojogos.html" class="link-postagens"><i class="bi bi-journal-text"></i> Gêneros</a>
                     <a href="eventosjogos.html" class="link-postagens"><i class="bi bi-calendar2-date"></i> Eventos</a>
