--- a/generomusicas.html
+++ b/generomusicas.html
@@ -55,7 +55,7 @@
             <section class="box-info">
                 <div class="info">
                     <a href="postagemmusica.html" class="link-postagens"><i class="bi bi-send"></i> Postagens</a>
-                    <a href="maisComentadosMusicas.html" class="link-postagens"><i class="bi bi-chat-text"></i> Livros mais comentados</a>
+                    <a href="maisComentadosMusicas.html" class="link-postagens"><i class="bi bi-chat-text"></i> Músicas mais comentados</a>
                     <a href="" class="link-postagens"><i class="bi bi-camera-reels"></i> Produtoras</a>
                     <a href="generomusicas.html" class="link-postagens"><i class="bi bi-journal-text"></i> Gêneros</a>
                     <a href="eventosmusica.html" class="link-postagens"><i class="bi bi-calendar2-date"></i> Eventos</a>
