--- a/chatt/public/chatcinema.html
+++ b/chatt/public/chatcinema.html
@@ -24,9 +24,9 @@
                 <li><a href="chatt/public/chatjogos.html">Comunidade de Jogos</a>
                 <li><a href="chatt/public/chatcinema.html">Comunidade de Cinema</a>
                 <li><a href="chatt/public/chatmariafifi.html">Comunidade Maria fifi</a>
-                <li><a href="suporte.html">Suporte</a></li>
-                <li><a href="teladenuncias.html">Reportar</a></li>
-                <li><a href="login.html">Sair</a></li>
+                <li><a href="../../suporte.html">Suporte</a></li>
+                <li><a href="../../teladenuncias.html">Reportar</a></li>
+                <li><a href="../../login.html">Sair</a></li>
             </ul>
             <div class="linha"></div>
             <section class="account">
